k8s/apps/accounting/affine/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: affine
  labels:
    app.kubernetes.io/name: affine
    app.kubernetes.io/instance: affine
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: affine
      app.kubernetes.io/instance: affine
  template:
    metadata:
      labels:
        app.kubernetes.io/name: affine
        app.kubernetes.io/instance: affine
    spec:
      containers:
        - name: affine
          # renovate: datasource=github-releases depName=toeverything/AFFiNE version=0.21.3
          image: ghcr.io/toeverything/affine-graphql:stable-a166760
          command:
            - sh
            - -c
            - node ./scripts/self-host-predeploy.js && node --import ./scripts/register.js ./dist/index.js
          ports:
            - name: http
              containerPort: 3010
          volumeMounts:
            - name: data
              mountPath: /root/.affine/storage
            - name: config
              mountPath: /root/.affine/config
            - name: pg-certs
              mountPath: /pg-certs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: affine-data
        - name: config
          persistentVolumeClaim:
            claimName: affine-config
        - name: pg-certs
          secret:
            secretName: affine-pg-cluster-cert
