k8s/apps/accounting/affine/ingress.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
  labels:
    app.kubernetes.io/name: affine
    app.kubernetes.io/instance: affine
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: affine
    app.kubernetes.io/instance: affine
  ports:
    - name: http
      port: 3010
      targetPort: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  labels:
    app.kubernetes.io/name: affine
    app.kubernetes.io/instance: affine
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: affine.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: affine
                port:
                  name: http
